@@ -1,7 +1,9 @@
 AUX bashrc 635 SHA256 a123aaa2fd47326f33dfe9c8bac06adfcbbcc8d30afd75046ddf7e56bd55f9cd SHA512 9f415083ce36a6cdc318fff343b05281974b2d416c2921eb014447dc587ddd65e3263fa761a89f2341b991cc782b7d37593d6c4bc50e2d18a61db245af3340d3 WHIRLPOOL d4d197662e506519f4b964c596964b720e43c8b230dc28575c677e9c66a215700128908ad18b0af3a68b0d0b2b1fbbd35b30af416935f35b276c6dae226ce465
 DIST gentoo-sources-kernelimage-4.19.71.tar.xz 38645292 SHA256 b29a8adeee7d2a0acfa5e354e4045cd7aaf64fbf58aca81903e95559a2362b27 SHA512 87a87da7bd038dbedfd26685e670062513a94f438cb604b05f495710b99588dbb11621d68a28521a86fbe4a219a94f238d37086ca41084405624d39158b2f0be WHIRLPOOL 894ab8cbf396f23840b0ef2078c745b383dd6177b95b314af53e2d17787197ed1590d0bffd4d83dd100d3abd7fb49b11b4eee51f8c0e442be6ee060a43a1b53c
 DIST gentoo-sources-kernelimage-4.19.72.tar.xz 55078128 SHA256 682b87b307fdd85f2b0502d9290f90dab7be1c39243515faadfce7304b989e6c SHA512 39714b46fae62a9b01a6d642ec4fbbfabeb4d8c02888dc63273e33d18c6539bdde6c7b636473dab5185000fb136bfb6377320c47cad58c1579c1f0893537d373 WHIRLPOOL 3f6693eefc6edb55dbba62ab97610629c717557c5745ea800c94f650bb50abda1236293828b774e55442b57500a19977a5f4e087dcc31383cda5ded9ffc749f9
+DIST gentoo-sources-kernelimage-4.19.73.tar.xz 55008900 SHA256 d84c1a4a23470c4707591c361cf206634da896a13f2b759cade32cbc7ce6a720 SHA512 b42a5d68367238c80fc33d8586e8df8c71b4631c7a07fa79243ed6b326b3eed7a78364fab2eaedea310b313238e19e413fb5fc331bcb94859d0e7e9eb737f32c WHIRLPOOL 3a6106ce000462748b55e60e1f8e26573e071286d486a2f8dedb2dc11a4a4ddc34a44d4e9de86fdad779e34b9c01dab23d08276e40a4baaf36d53045b7650daa
 EBUILD gentoo-sources-kernelimage-4.19.71.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
 EBUILD gentoo-sources-kernelimage-4.19.72.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
-MISC ChangeLog 442 SHA256 f2fcd5b9b0928b2286c84d198cbdd7e9e8bca05cfc8d59511d637521d453c1b8 SHA512 4ac30c4beaef1096e50d6b2aed473abc7b6d4521f2921b3cf7af17ca5af8596edaf6f347f32db5341107c3c919565c544a277eaf69b3a5efd41ce008fd650a8e WHIRLPOOL 6a5e0f93a3fe39e29dc2f018517523894b7854740b6015a7d0130fa1fa4311930d9c3fae6e009cafc8b39ad57d2735e907f119111f31e012f156909392e87716
+EBUILD gentoo-sources-kernelimage-4.19.73.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
+MISC ChangeLog 654 SHA256 bbbdb55175ddfa03bccfd8e8975f95cadbd13e15834021c6eb1edc394750da04 SHA512 a6c26d0ba72f70f02d037c2981dc3717d9251ba305f713818e874b7283dbb396298a873cfa541a1d5e6eff5264874b8820fadc549286f237886fc60e5be0eba5 WHIRLPOOL cb12fcefacc2fc4c75551a08874c697fe87607d113ff9ee5ff0659842a7daf1e060dc796f356b47cb018b3b25cab7a260e86d560f5608eb8cee2dee678c110e4
 MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
