@@ -1,3 +1,9 @@
+*gentoo-sources-kernelimage-4.19.73 (04 Oct 2019)
+
+  04 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
+  +gentoo-sources-kernelimage-4.19.73.ebuild:
+  sys-kernel/gentoo-sources-kernelimage: Version bump to 4.19.73
+
 *gentoo-sources-kernelimage-4.19.72 (02 Oct 2019)
 
   02 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
